Fix competency project bullet point alignment

--- a/shared/css/styles.css
+++ b/shared/css/styles.css
@@ -2098,11 +2098,11 @@ code[class*="language-"] {
 
     left: 0;
 
-    top: 1px;
+    top: 5px;
 
-    font-size: 13px;
+    font-size: 13.5px;
 
-    color: #76819b;
+    color: #6c768e;
 
 }
 
